remove github link for now, remove lazyload (sucks on mobile), safari graphical fix

--- a/app/sass/_global.scss
+++ b/app/sass/_global.scss
@@ -211,7 +211,6 @@ a{
   margin-bottom: -1px;
 }
 .block{
-  @extend %slower-transition;
   position: relative;
   float: left;
   margin: auto;
