--- a/app/sass/_mixins.scss
+++ b/app/sass/_mixins.scss
@@ -26,7 +26,7 @@
     }
   }
   @if $thickness == heavy{
-    background-size: 1px 6px;
+    background-size: 1px 7px;
     background-position: 0 2.9rem;
     background-repeat: repeat-x;
   }
